[project]
name = "testtoys"
version = "0.1.0"
description = ""
authors = [
    {name = "lilinfang",email = "lilinfangrelax@gmail.com"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "pyside6 (>=6.9.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
